.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Financial_Control__c.object
<CustomObject>
    <description>Payroll
Allows easy client management of Benefits and tax and NI treatment and assignment of Pay codes</description>
    <fields>
        <fullName>xcdhcm__Attachable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Attachable_council_tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachable council tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Benefit_related_earnings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit related earnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_Benefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company benefit</label>
        <referenceTo>xcdhcm__Company_Benefits__c</referenceTo>
        <relationshipLabel>Financial Controls</relationshipLabel>
        <relationshipName>Financial_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_Pension_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company pension scheme</label>
        <referenceTo>xcdhcm__Company_Pension_Scheme__c</referenceTo>
        <relationshipLabel>Financial Controls</relationshipLabel>
        <relationshipName>Financial_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_centre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select to apply Cost Centre code to payroll costs of this type</inlineHelpText>
        <label>Cost centre</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Cost_centre__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Cost_centre__c</referenceTo>
        <relationshipLabel>Payment Types Using Code</relationshipLabel>
        <relationshipName>Pay_cost_codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Disguised_Remuneration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disguised remuneration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NIable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, employee contributions are deducted from NI-able earnings</inlineHelpText>
        <label>Employee NIable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, employee contributions are deducted from taxable earnings</inlineHelpText>
        <label>Employee taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_NIable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, employer contributions are added to NI-able earnings</inlineHelpText>
        <label>Employer NIable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, employer contributions are added to taxable earnings</inlineHelpText>
        <label>Employer taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Holiday_pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in holiday earnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P11D__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Benefits to be reported in P11D</inlineHelpText>
        <label>P11D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_code__c</fullName>
        <label>Pay code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pensionable_employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Formerly Pensionable employee. Should always equal Pensionable employer</description>
        <label>System: pensionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pensionable_employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pensionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Record_type__c</fullName>
        <label>Record type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Car benefit</fullName>
                </value>
                <value>
                    <fullName>Commission</fullName>
                </value>
                <value>
                    <fullName>Court Orders</fullName>
                </value>
                <value>
                    <fullName>Deductions</fullName>
                </value>
                <value>
                    <fullName>One off benefit</fullName>
                </value>
                <value>
                    <fullName>One off deduction</fullName>
                </value>
                <value>
                    <fullName>One off payment</fullName>
                </value>
                <value>
                    <fullName>Pension</fullName>
                </value>
                <value>
                    <fullName>Repayable loan</fullName>
                </value>
                <value>
                    <fullName>HMRC Regulatory</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Parenting Leave</fullName>
                </value>
                <value>
                    <fullName>Employee share purchase</fullName>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Court order</fullName>
                </value>
                <value>
                    <fullName>Pay Run</fullName>
                </value>
                <value>
                    <fullName>Deduction</fullName>
                </value>
                <value>
                    <fullName>Time Period</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Pensioner payments</fullName>
                </value>
                <value>
                    <fullName>Annual Leave</fullName>
                </value>
                <value>
                    <fullName>Court order deduction</fullName>
                </value>
                <value>
                    <fullName>Court order payment to third party</fullName>
                </value>
                <value>
                    <fullName>Employee HMRC Payments</fullName>
                </value>
                <value>
                    <fullName>Regular pensions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Type__c</fullName>
        <label>Pay element</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>xcdhcm__Financial_control_type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__VAT_code__c</fullName>
        <label>VAT code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Financial Control</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Payment type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Controls</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Cost_Centre_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>and(
  not(isblank(xcdhcm__Cost_centre__c )),
  not(isblank(xcdhcm__Pay_code__c)),
  xcdhcm__Cost_centre__r.xcdhcm__Cost_centre__c &lt;&gt; xcdhcm__Pay_code__c )</errorConditionFormula>
        <errorMessage>As you have selected a Cost Centre, Pay code must be set equal to the Cost Centre Cost code.  Please set Pay code blank and it will be completed automatically</errorMessage>
    </validationRules>
</CustomObject>